css/style.css
/* FONTS */

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
/* GLOBAL STYLES */

:root {
  --font-primary: 'Anton', sans-serif;
  --font-secondary: 'Roboto', sans-serif;
  --bg-color: #ffffff;
  --font-color: #000;
  --header-color: #c30000;
  --btn-bg-color: #c30000;
  --banner-color: rgb(163, 206, 255);
  --banner-color2: rgb(218, 60, 21);
  --roadmap-color: #000;
  --header-shadow: rgb(30, 30, 192);
  --header-blue: #002c7e 0px 0px 200px;
  --banner-shadow: #ffb100 0px 0px 20px;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  background-color: #b8e5ff;
  display: flex;
  flex-flow: column;
  height: 100vh;
  color: var(--font-color);
  overflow-x: hidden;
}

#headlogo{
  width: 40px;
  height: 50px;
}

#cmnsoon{
  position:relative;
  width: 350px;
  height: 350px;
}

#botlogo{
  width: 150px;
  height: 150px;
}

#top {
  width: 100%;
  height: 100%;
}

#profile {
  width: 150px;
  height: 180px;
}

#lazy{
  width: 200px;
  height: 250px;
}

#movingmini
{
  width: 400px;
  height: 80px;
}

#join{
  width: 100%;
  height: 100%;
}

#biglinkA{
  width: 50%;
  height: 50%;
  transition: all 0.3s ease;
}

#biglink{
  width: 50%;
  height: 50%;
  transition: all 0.3s ease;
}

#biglinkA:hover{
  transform: scale(1.05);
}

#sixpack{
  width: 70%;
  height: 70%;
}

#shelf{
  width: 100%;
  z-index: -1;
}

#cheers{
  width: 250px;
  height: 100px;
  margin-left: 10%;
}

#boyslogo{
  position:relative;
  width: 300px;
  height: 300px;
}



.menu{
  display: flex;
  align-items: center;
  justify-content: center;
}

.container2 {
  display: flex;
  flex-direction: column;
}

.banner{
  padding-bottom: 100px;
}

.banner_wrapper{
  position: fixed;
  width: 100%;
  height: 55px;
  top: 8%;
  background: #ffb100;
  display:flex;
  flex-wrap: wrap;
  align-items: top;
  overflow: hidden;
  z-index: 10;
}

.banner_wrapper .moving-content {
  position: absolute;
  animation: cloud-animation 15s infinite linear; 
  -webkit-animation: cloud-animation 15s infinite linear; 
  -moz-animation: cloud-animation 15s infinite linear; 
  
}

.banner_wrapper .moving-content #group-1{
  padding: 0;
  left:0px;
}

.banner_wrapper .moving-content #group-2{
  padding: 0;
  left:100px;
}

.banner_wrapper .cloud-1{
  position: absolute;
  align-self: center;
}


.banner_wrapper .cloud-1 h2{
  position: absolute;
  padding-bottom: 70px;
  min-width: 1000px;
  font-size: 250%;
  font-family: var(--font-primary);
  -webkit-text-stroke: 1px white;
  -webkit-text-fill-color: transparent;
  font-style: italic;
}

@keyframes cloud-animation {
  0%       {left: 100%;}
  99.9999%   {left: -100%;}
  100%     {left: 0px;}
}

.top{
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  align-items: center;
}

.contact_btn:hover{
  transform: scale(1.3);
}

.linkbtn{
  transition: all 0.3s ease;
}

.linkbtn:hover{
  transform: scale(1.05);
}

header {
  position:fixed;
  width: 100%;
  background-color: rgb(255, 92, 160);
  box-shadow: var(--header-shadow);
  z-index: 10;
}

header .container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

ul li {
  list-style-type: none;  
}


.comingsoon{
  position: relative;
  padding: 2%;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  margin: auto;
  flex-direction: row;
  align-items: center;
}

.comingsoon .colitem{
  display: flex;
  width: 30%;
  flex-direction: column;
  align-items: center;
  flex: 1;
  padding: 2%;
  padding-top: 5%;
  padding-bottom: 5%;
  z-index: 1;
  background-image: url("stainsmall.PNG");
  background-position: center;
  background-size: 80%;
  background-repeat: no-repeat;
  z-index: 3;
}

.comingsoon .colitem h2{
  font-family: var(--font-primary);
  font-size:3em;
  font-style: italic;
  color: rgb(255, 137, 174);
}

.comingsoon .colitem p{
  font-family: var(--font-secondary);
  font-size: 2em;
  text-align: center;
}

.comingsoon .moving{
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
}

.comingsoon .moving .cheers{
  position: absolute;
  top: 0;
  bottom: 0;
  height: 50%;
  background-size: 100%;
  max-width: 50%;
  max-height: 50%;
  margin-right: 5%;
  background-repeat: no-repeat;
}

.comingsoon .moving .beerbg{
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  background-image: url("beerglass.PNG");
  background-size: 30%;
  background-position-y: 50%;
  background-position: right;
  background-repeat: no-repeat;
}



.comingsoon .moving .winebg{
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  background-image: url("wineglass.PNG");
  background-size: 30%;
  background-position-y: 50%;
  background-repeat: no-repeat;
  background-position: right;
}

.shelf{
  width: 100%;
  height: 50%;
  margin-top: -12%;
  z-index: -5;
}

.community{
  width: 80%;
  display: flex;
  flex-wrap: wrap;
  margin: auto;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  z-index: -2;
}

.community .text{
  width: 20%;
  position: absolute;
  display: flex;
  flex-direction: column;
}

.community .text h1{
  font-family: var(--font-primary);
  font-size:3rem;
  font-style: italic;
  color:white;
  /* -webkit-text-stroke: 1.5px #ffb100;
  -webkit-text-fill-color: white; */
}

.community .rowitem{
  position: relative;
  display: flex;
  width: 100%;
  flex-direction: row;
  align-items: center;
  flex: 1;
}

.community .link{
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
}

.community .linkB{
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
  margin-left: -30%;
}

.below {
  align-items: center;
  width: cover;
  justify-content: center;
  display: flex;
  flex-direction: row;
  position: relative;
  background-color:rgb(255, 92, 160);
  box-shadow: var(--header-shadow);
}

.lower{
  position: relative;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  margin: auto;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.lower .bg-static {
  background-position: center;
  background-repeat: no-repeat;
}

.lower .bg-move {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 130%;
  background-image: url("winestain.PNG");
  background-size: 1000px;
  background-position: right;
  background-repeat: no-repeat;
}

.lower .profiles{
  display: flex;
  flex-direction: row;
  flex: 1;
}

.lower .profileslogo{
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 1;
}

.lower .profiles .profilespair{
  position: relative;
}

.lower .profiles h1{
  width: 60%;
  padding-top: 5%;
  font-family: var(--font-primary);
  font-size: 5rem;
  font-weight: bolder;
  color: #ffffff;
}

.T{
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: left;
}

.profiles .W h2{
  font-family: var(--font-secondary);
  color: var(--font-color);
  font-size: 1.0rem;
  text-align: center;
  color: white;
  
}

.profiles .W p{
  font-family: var(--font-secondary);
  color: var(--font-color);
  color: white;
  font-size: 0.9rem;
  text-align: center;
  font-weight: lighter;
}

.profiles .B h2{
  font-family: var(--font-secondary);
  color: var(--font-color);
  font-size: 1.0rem;
  text-align: center;
  color: #ffffff;
  
}

.profiles .B p{
  font-family: var(--font-secondary);
  color: var(--font-color);
  font-size: 0.9rem;
  text-align: center;
  font-weight: lighter;
  color: #ffffff;
}

.lazylogo{
  z-index: 5;
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (max-width: 900px){
  .comingsoon .colitem h2{
    font-family: var(--font-primary);
    font-size:1.5em;
    font-style: italic;
  }
  
  .comingsoon .colitem p{
    font-family: var(--font-secondary);
    font-size: 1em;
    text-align: center;
  }

  .community h1{
    font-family: var(--font-primary);
    font-size:1.5em;
    font-style: italic;
  }

  .lower .bg-move {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 1000px;
    background-image: url("winestain.PNG");
    background-size: 1000px;
    background-position: right;
    background-repeat: no-repeat;
  }

  .community .text h1{
    font-family: var(--font-primary);
    font-size:1.5rem;
    font-style: italic;
    color:white;
  /* -webkit-text-stroke: 1.5px #ffb100;
  -webkit-text-fill-color: white; */
  }
}

/* BUTTONS */

.btn {
  display: inline-block;
  padding: 1rem 2rem;
  background: var(--btn-bg-color);
  color: var(--font-color);
  font-family: var(--font-primary);
  font-weight: bold;
  font-size: 1rem;
  text-transform: capitalize;
  transition: all 0.3s ease;
  box-shadow: 4px 4px 0 0 var(--accent-color);
  cursor: pointer;
  position: relative;
  text-decoration: none;
  outline: none;
}
.btn:hover {
  box-shadow: none;
  transform: scale(1.1);
}

.lazyboys{
  transition: all 0.3s ease;
}

.lazyboys:hover {
  transform: scale(1.2);
}

.join{
  transition: all 0.3s ease;
}

.join:hover {
  transform: scale(1.1);
}


.wallet-btn {
  border-radius: 4px;
  margin-left: 2rem;
  border-color: transparent;
}

.hero-btnA {
  background-color: rgb(0, 0, 0);
  color: var(--bg-color);
  font-family: var(--font-primary);
  border-radius: 50%;
  font-size: 4.2rem;
  font-style: italic;
}

.hero-btnB {
  background-color: rgb(139, 139, 139);
  color: var(--bg-color);
  font-family: var(--font-primary);
  border-radius: 50%;
  font-size: 4.2rem;
  font-style: italic;
  align-items: center;
}


/* CONTACT */

.contact{
  background-color: #000;
}

.contact h1 {
  color: var(--btn-bg-color);
  text-shadow: 2px 2px 0 var(--accent-color);
  margin: 2rem 0;
  font-size: 3.5rem;
  text-align: center;
}




/* COUNTDOWN SECTION */

section {
  flex: 1 1 auto;
}

/* OWNER STYLES */

.owner-status {
  font-size: 2rem;
  text-align: center;
}

/* MEDIA QUERIES */

@media screen and (max-width: 768px) {
  .menu {
    gap: 1rem;
  }
  .wallet-btn {
    margin-left: 0;
    padding: 1rem;
    max-width: 8rem;
  }
  .countdown h1 {
    font-size: 2rem;
  }
  .countdown p {
    font-size: 1rem;
  }
}
 

